--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,9 @@
 <div id="columns">
 	<div id="side">
 		<ul>
-			<li><a href="#">Home</a></li>
+			<li>Time: <%= Time.now %></li>
+			<li>Visits: <%= @count %></li>
+			<li><%= link_to 'Home', store_path %></li>
 			<li><a href="#">Questions</a></li>
 			<li><a href="#">News</a></li>
 			<li><a href="#">Contact</a></li>
